fix styling on mobile

--- a/static/search.css
+++ b/static/search.css
@@ -5,7 +5,7 @@
 
 @media screen and (max-width: 800px) {
     .search_container {
-        width: 80%;
+        width: 100%;
     }
 }
 
