--- a/static/submit.css
+++ b/static/submit.css
@@ -71,7 +71,7 @@ label > * {
 }
 
 @media screen and (max-width: 800px) {
-    .word_select_container, .type_select, .select_popover {
+    .word_select_container, .select_popover {
         width: 14.5em;
     }
 
